<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/businessname"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Business Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/businessnumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Business Number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/businessname"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/businesstype"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/businessnumber"
        app:layout_constraintLeft_toLeftOf="parent"
        android:entries="@array/BusinessTypes"
        android:spinnerMode="dialog"
        android:prompt="@string/typestext"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="173dp" />

    <EditText
        android:id="@+id/businessaddress"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Business Address"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/businesstype"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/businessprovince"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/businessaddress"
        app:layout_constraintLeft_toLeftOf="parent"
        android:entries="@array/Provinces"
        android:spinnerMode="dialog"
        android:prompt="@string/provincestext"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="173dp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Update Data"
        app:layout_constraintTop_toBottomOf="@+id/businessprovince"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateBusiness"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Business"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/businessprovince"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:onClick="eraseBusiness"/>



</android.support.constraint.ConstraintLayout>
