...
        android:spinnerMode="dialog"
        android:prompt="@string/provincestext"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="173dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Business"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/businessprovince"
        android:layout_marginRight="8dp"
...
